# weather_avatar_bot

./: .env.example  .gitignore  README-node.md  README.md  bot.py  config.py  pyproject.toml  requirements.txt
